[package]
name = "rs-cjy"
version = "0.1.1"
authors = ["weaming <garden.yuen@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Convert between CSV, JSON, YAML."
homepage = "https://github.com/weaming/rs-cjy"
repository = "https://github.com/weaming/rs-cjy"
keywords = ["csv", "json", "yaml"]

[dependencies]
csv = "1"
serde_json = "1.0.32"
yaml-rust = "0.4.2"
linked-hash-map = "0.5.1"

[lib]
name = "formats"
path = "src/formats/lib.rs"

[[bin]]
name = "csv-json"
path = "src/bin/csv_json.rs"

[[bin]]
name = "json-yaml"
path = "src/bin/json_yaml.rs"

[[bin]]
name = "csv-yaml"
path = "src/bin/csv_yaml.rs"
